--- a/frontend/IcareMobile/app/src/main/AndroidManifest.xml
+++ b/frontend/IcareMobile/app/src/main/AndroidManifest.xml
@@ -12,10 +12,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
-
         <activity
-            android:name=".Home"
-            android:exported="true">
+            android:name=".DoctorDetails"
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -23,8 +22,13 @@
             </intent-filter>
         </activity>
         <activity
+            android:name=".Home"
+            android:exported="true">
+
+        </activity>
+        <activity
             android:name=".Registration"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".SignIn"
             android:exported="true" />
