--- a/frontend/IcareMobile/app/src/main/AndroidManifest.xml
+++ b/frontend/IcareMobile/app/src/main/AndroidManifest.xml
@@ -13,11 +13,14 @@
         android:theme="@style/Theme.MyApplication"
         tools:targetApi="31">
         <activity
+            android:name=".EyeScan"
+            android:exported="false" />
+        <activity
             android:name=".EyeDiseases"
             android:exported="false" />
         <activity
             android:name=".DoctorDetails"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".Home"
             android:exported="true">
