--- a/frontend/IcareMobile/app/src/main/AndroidManifest.xml
+++ b/frontend/IcareMobile/app/src/main/AndroidManifest.xml
@@ -14,7 +14,13 @@
         tools:targetApi="31">
         <activity
             android:name=".EyeScan"
-            android:exported="false" />
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
             android:name=".EyeDiseases"
             android:exported="false" />
@@ -24,11 +30,7 @@
         <activity
             android:name=".Home"
             android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".Registration"
