--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,3 @@
-server.port=8090
+server.port = 8090
+spring.data.mongodb.uri=mongodb+srv://dbMosh:root@cluster0.3tlk7q6.mongodb.net/Icare?retryWrites=true&w=majority
+
