--- a/frontend/IcareMobile/app/build.gradle
+++ b/frontend/IcareMobile/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     //retrofit dependency and GSON library
     implementation 'com.squareup.retrofit2:retrofit:(insert latest version)'
     implementation group: 'com.squareup.retrofit2', name: 'converter-gson', version: '2.9.0'
+    //imagePicker
+    implementation 'com.github.dhaval2404:imagepicker:2.1'
 }
