--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 server.port = 8090
 spring.data.mongodb.uri=mongodb+srv://dbMosh:root@cluster0.3tlk7q6.mongodb.net/Icare?retryWrites=true&w=majority
 
+spring.servlet.multipart.enabled=true
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
