--- a/frontend/IcareMobile/app/build.gradle
+++ b/frontend/IcareMobile/app/build.gradle
@@ -7,6 +7,11 @@ android {
     namespace 'com.example.myapplication'
     compileSdk 33
 
+    packagingOptions {
+        exclude 'META-INF/androidx.cardview_cardview.version'
+        // Add more exclude statements if needed
+    }
+
     defaultConfig {
         applicationId "com.example.myapplication"
         minSdk 24
@@ -38,6 +43,7 @@ dependencies {
     implementation 'androidx.appcompat:appcompat:1.6.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
+    implementation 'com.android.support:cardview-v7:28.0.0'
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
