--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,3 +4,15 @@ spring.data.mongodb.uri=mongodb+srv://dbMosh:root@cluster0.3tlk7q6.mongodb.net/I
 spring.servlet.multipart.enabled=true
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=qwwerrrty11@gmail.com
+spring.mail.password=moipoeipfdehuxrd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+# Set your email as a property
+myapp.email=qwwerrrty11@gmail.com
