--- a/Webapp/webApp/src/main/resources/application.yml
+++ b/Webapp/webApp/src/main/resources/application.yml
@@ -1,5 +1,7 @@
 spring:
   data:
     mongodb:
-      uri: mongodb+srv://root:NisalSYapa@icaredb.zwd1cmk.mongodb.net/?retryWrites=true&w=majority
-      database: pmanage
+      uri: mongodb+srv://dbMosh:root@cluster0.3tlk7q6.mongodb.net/Icare?retryWrites=true&w=majority
+
+
+
