fix : Modified README file for clear detail project breakdown

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,3 +16,8 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
 # Set your email as a property
 myapp.email=qwwerrrty11@gmail.com
+
+# Custom Vision Config
+customvision.url=YOUR-CUSTOM-VISION-PROJECT-URL
+customvision.prediction-key=YOUR-CUSTOM-VISION-PRED-KEY
+
